--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <div class="col-md-3" id="sidebar">
-	<div class="well well-md">
+	<div sticky class="well well-md">
 <h3>Input Stock Ticker</h3>
 <div class="input-group">
 
