--- a/partials/about.html
+++ b/partials/about.html
@@ -1,4 +1,9 @@
+<div class='container'>
 
-<div class="col-md-12">
-  <h2>about</h2>
+  <div class="col-md-12">
+    <h2>about</h2>
+  </div>
+
+
+
 </div>
