--- a/partials/home.html
+++ b/partials/home.html
@@ -1,29 +1,72 @@
 <div class="col-md-3" id="sidebar">
-	<div sticky class="well well-md">
-<h3>Input Stock Ticker</h3>
-<div class="input-group">
+	<menu></menu>
+	
 
-  <input type="text" class="form-control" placeholder="">
-	<span class="input-group-btn">
-	        <button class="btn btn-primary" type="button">Go!</button>
-	      </span>
-</div>
-
-<hr>
-<strong><h4>Fundamental Analysis</h4></strong>
-<ul>
-	<li>Sales, Profits, Net Income</li>
-	<li>jkshdkh</li>
-</ul>
 	</div>
-</div>
+
 <div class="col-md-9">
 	<div class="well well-md">
-<h2>{{6+4}} No Curly Braces Means Angular is working</h2>
+	  <h2 class="center-text">Loading Data for (( STOCK ))</h2>
+		<hr>
+		<h4>
+			Reuters API: <span class="label label-info">Info</span>
+			&emsp;
+			Google API:
+<span class="label label-warning">Warning</span>
+&emsp;
+Yahoo API:
+<span class="label label-danger">Danger</span>
+&emsp;
+Morning Star API:
+<span class="label label-danger">Danger</span>
+		</h4>
+	</div>
+	<div class="well well-md">
+<h2 class="center-text highlight">{{"Short" + " Term"}} Momentum</h2>
+<hr>
+<h3>Sales, Net Income, Operating Cashflow</h3>
 <p>
 	Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
 </p>
+
+<div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 col-xl-10 col-xl-offset-1">
+
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">adfgdafgdfg</h3>
+  </div>
+  <div class="panel-body">
+dsfasdfsdfdsf
+  </div>
+  <div class="panel-footer">
+
+  </div>
+</div>
+</div>
+<h3>Future Growth Drivers: EPS</h3>
+
+<div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 col-xl-10 col-xl-offset-1">
+
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">adfgdafgdfg</h3>
+  </div>
+  <div class="panel-body">
+dsfasdfsdfdsf
+  </div>
+  <div class="panel-footer">
+
+  </div>
+</div>
+<hr>
+</div>
+<p>
+	Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
+</p>
+
+
 	</div>
+
 	<div class="well well-md">
 <h2>lkdjflkdj</h2>
 <p>
