Angular solution for Anchor Tags q__q

--- a/partials/tenSteps/menu.html
+++ b/partials/tenSteps/menu.html
@@ -9,26 +9,28 @@
 	      </span>
 </div>
 
+
+
 <hr>
 <strong><h4 class="highlight">Fundamental Analysis</h4></strong>
-<strong>Short Term: Momentum</strong>
+<strong><a ng-click="main.scrollTo('st')">Short Term: Momentum</a></strong>
 <ul>
-	<li>Sales, Net Income, Operating Cashflow</li>
-	<li>Future Growth Drivers: EPS</li>
+	<li><a ng-click="main.scrollTo('sno')">Sales, Net Income, Operating Cashflow</a></li>
+	<li><a ng-click="main.scrollTo('fgd')">Future Growth Drivers: EPS</a></li>
 </ul>
 
-<strong>Medium Term: Sustainability</strong>
+<strong><a ng-click="main.scrollTo('xxx')">Medium Term: Sustainability</a></strong>
 <ul>
-	<li>Sustainable Competitive Advantage</li>
-	<li>ROE > 12-15%</li>
-	<li>Price Below Intrinsic Value</li>
+	<li><a ng-click="main.scrollTo('xxx')">Sustainable Competitive Advantage</a></li>
+	<li><a ng-click="main.scrollTo('xxx')">ROE > 12-15%</a></li>
+	<li><a ng-click="main.scrollTo('xxx')">Price Below Intrinsic Value</a></li>
 </ul>
-<strong>Long Term: Downside Protection</strong>
+<strong><a ng-click="main.scrollTo('xxx')">Long Term: Downside Protection</a></strong>
 <ul>
-	<li>Conservative Debt</li>
-	<li>Healthy Cash Flow</li>
-	<li>Insiders are Bullish</li>
-	<li>Risks Well Managed</li>
+	<li><a ng-click="main.scrollTo('xxx')">Conservative Debt</a></li>
+	<li><a ng-click="main.scrollTo('xxx')">Healthy Cash Flow</a></li>
+	<li><a ng-click="main.scrollTo('xxx')">Insiders are Bullish</a></li>
+	<li><a ng-click="main.scrollTo('xxx')">Risks Well Managed</a></li>
 </ul>
 <hr>
 <strong><h4 class="highlight">Technical Analysis</h4></strong>
