Import Chart.JS

--- a/partials/tenSteps/menu.html
+++ b/partials/tenSteps/menu.html
@@ -19,18 +19,18 @@
 	<li><a ng-click="main.scrollTo('fgd')">Future Growth Drivers: EPS</a></li>
 </ul>
 
-<strong><a ng-click="main.scrollTo('xxx')">Medium Term: Sustainability</a></strong>
+<strong><a ng-click="main.scrollTo('mts')">Medium Term: Sustainability</a></strong>
 <ul>
-	<li><a ng-click="main.scrollTo('xxx')">Sustainable Competitive Advantage</a></li>
-	<li><a ng-click="main.scrollTo('xxx')">ROE > 12-15%</a></li>
-	<li><a ng-click="main.scrollTo('xxx')">Price Below Intrinsic Value</a></li>
+	<li><a ng-click="main.scrollTo('sca')">Sustainable Competitive Advantage</a></li>
+	<li><a ng-click="main.scrollTo('roe')">ROE > 12-15%</a></li>
+	<li><a ng-click="main.scrollTo('piv')">Price Below Intrinsic Value</a></li>
 </ul>
-<strong><a ng-click="main.scrollTo('xxx')">Long Term: Downside Protection</a></strong>
+<strong><a ng-click="main.scrollTo('lt')">Long Term: Downside Protection</a></strong>
 <ul>
-	<li><a ng-click="main.scrollTo('xxx')">Conservative Debt</a></li>
-	<li><a ng-click="main.scrollTo('xxx')">Healthy Cash Flow</a></li>
-	<li><a ng-click="main.scrollTo('xxx')">Insiders are Bullish</a></li>
-	<li><a ng-click="main.scrollTo('xxx')">Risks Well Managed</a></li>
+	<li><a ng-click="main.scrollTo('debt')">Conservative Debt</a></li>
+	<li><a ng-click="main.scrollTo('cf')">Healthy Cash Flow</a></li>
+	<li><a ng-click="main.scrollTo('insider')">Insiders are Bullish</a></li>
+	<li><a ng-click="main.scrollTo('risk')">Risks Well Managed</a></li>
 </ul>
 <hr>
 <strong><h4 class="highlight">Technical Analysis</h4></strong>
