--- a/partials/tenSteps/menu.html
+++ b/partials/tenSteps/menu.html
@@ -1,5 +1,5 @@
 
-	<div sticky class="well well-md">
+	<div sticky class="well well-md well-lg">
 <h3>Input Stock Ticker</h3>
 <div class="input-group">
 
