--- a/partials/tenSteps/mt.html
+++ b/partials/tenSteps/mt.html
@@ -17,6 +17,18 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 <div class="panel-body">
 dsfasdfsdfdsf
 </div>
+<table class='table table-striped table-bordered table-hover table-condensed'>
+  <thead>
+    <tr>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
 <div class="panel-footer">
 
 </div>
@@ -36,11 +48,23 @@ dsfasdfsdfdsf
   <div class="panel-body">
   dsfasdfsdfdsf
   </div>
+  <table class='table table-striped table-bordered table-hover table-condensed'>
+    <thead>
+      <tr>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
   <div class="panel-footer">
 
   </div>
   </div>
-  <hr>
+  <hr></hr>
   </div>
 </div>
 <p>
