--- a/partials/tenSteps/menu.html
+++ b/partials/tenSteps/menu.html
@@ -3,7 +3,7 @@
 <h3>Input Stock Ticker</h3>
 <div class="input-group">
 
-  <input type="text" class="form-control" placeholder="">
+  <input type="text" ng-model="main.stockTicker" class="form-control" placeholder="">
 	<span class="input-group-btn">
 	        <button class="btn btn-primary" type="button">Go!</button>
 	      </span>
