added functional ms API

--- a/partials/tenSteps/iv.html
+++ b/partials/tenSteps/iv.html
@@ -13,8 +13,8 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 
       </div>
       <div class="panel-footer">
-        <canvas id="line" class="chart chart-line" data="main.chartArray" series="main.series"
-        labels="main.labels"></canvas>
+        <canvas id="line" class="chart chart-line" data="chartArray" series="series"
+        labels="labels"></canvas>
       </div>
     </div>
   </div>
