--- a/partials/tenSteps/menu.html
+++ b/partials/tenSteps/menu.html
@@ -1,36 +1,41 @@
 
 	<div sticky class="well well-md well-lg">
 <h3>Input Stock Ticker</h3>
-<div class="input-group">
 
-  <input type="text" ng-model="main.stockTicker" class="form-control" placeholder="">
-	<span class="input-group-btn">
-	        <button class="btn btn-primary" type="button">Go!</button>
-	      </span>
-</div>
+<form ng-submit="tickerOnly(stockTicker)">
+<div class="input-group">
+	  <input type="text" ng-model="stockTicker" class="form-control" placeholder="">
+		<span class="input-group-btn">
+
+			<input class="btn btn-primary" type="submit" id="submit" value="GO!" />
+		      <!--   <button class="btn btn-primary" ng-click=".tickerOnly(.stockTicker)" type="button">Go!</button> -->
+		      </span>
+				</div>
+
+</form>
 
 
 
 <hr>
 <strong><h4 class="highlight">Fundamental Analysis</h4></strong>
-<strong><a ng-click="main.scrollTo('st')">Short Term: Momentum</a></strong>
+<strong><a ng-click="scrollTo('st')">Short Term: Momentum</a></strong>
 <ul>
-	<li><a ng-click="main.scrollTo('sno')">Sales, Net Income, Operating Cashflow</a></li>
-	<li><a ng-click="main.scrollTo('fgd')">Future Growth Drivers: EPS</a></li>
+	<li><a ng-click="scrollTo('sno')">Sales, Net Income, Operating Cashflow</a></li>
+	<li><a ng-click="scrollTo('fgd')">Future Growth Drivers: EPS</a></li>
 </ul>
 
-<strong><a ng-click="main.scrollTo('mts')">Medium Term: Sustainability</a></strong>
+<strong><a ng-click="scrollTo('mts')">Medium Term: Sustainability</a></strong>
 <ul>
-	<li><a ng-click="main.scrollTo('sca')">Sustainable Competitive Advantage</a></li>
-	<li><a ng-click="main.scrollTo('roe')">ROE > 12-15%</a></li>
-	<li><a ng-click="main.scrollTo('piv')">Price Below Intrinsic Value</a></li>
+	<li><a ng-click="scrollTo('sca')">Sustainable Competitive Advantage</a></li>
+	<li><a ng-click="scrollTo('roe')">ROE > 12-15%</a></li>
+	<li><a ng-click="scrollTo('piv')">Price Below Intrinsic Value</a></li>
 </ul>
-<strong><a ng-click="main.scrollTo('lt')">Long Term: Downside Protection</a></strong>
+<strong><a ng-click="scrollTo('lt')">Long Term: Downside Protection</a></strong>
 <ul>
-	<li><a ng-click="main.scrollTo('debt')">Conservative Debt</a></li>
-	<li><a ng-click="main.scrollTo('cf')">Healthy Cash Flow</a></li>
-	<li><a ng-click="main.scrollTo('insider')">Insiders are Bullish</a></li>
-	<li><a ng-click="main.scrollTo('risk')">Risks Well Managed</a></li>
+	<li><a ng-click="scrollTo('debt')">Conservative Debt</a></li>
+	<li><a ng-click="scrollTo('cf')">Healthy Cash Flow</a></li>
+	<li><a ng-click="scrollTo('insider')">Insiders are Bullish</a></li>
+	<li><a ng-click="scrollTo('risk')">Risks Well Managed</a></li>
 </ul>
 <hr>
 <strong><h4 class="highlight">Technical Analysis</h4></strong>
