Added createChart Array function

--- a/partials/tenSteps/st.html
+++ b/partials/tenSteps/st.html
@@ -18,6 +18,8 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
   </div>
   <div class="panel-body">
 Figures in terms of (thousands? Millions?)
+{{createChartArray(aaplData) | json}}
+{{chartArray | json}}
 
   </div>
   <table class='table table-striped table-bordered table-hover table-condensed'>
