Refined Create Chart function.

--- a/partials/tenSteps/menu.html
+++ b/partials/tenSteps/menu.html
@@ -12,7 +12,11 @@
 		      </span>
 				</div>
 
+
+
 </form>
+<button type='button' class='btn btn-lg btn-warning' ng-click="createChartArray(aaplData)">Test</button>
+
 
 
 
