More view stuff and new reuters service

--- a/partials/tenSteps/iv.html
+++ b/partials/tenSteps/iv.html
@@ -10,7 +10,32 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
         <h3 class="panel-title">IV</h3>
       </div>
       <div class="panel-body">
-
+        Operating Cash Flow:
+        <br>
+        Total Debt:
+        <br>
+        Cash and Equivalents:
+        <br>
+        EPS Growth (Last 5 Years):
+        <br>
+        CF Growth Rate (Y1-3):
+        <br>
+        CF Growth Rate (Y4-10): 0-5-10%
+        <br>
+        No. of Shares Outstanding: millions
+        <br>
+        Discount Rate: NaN
+        <br>
+        Present Value of 10 Yr Cashflow:
+        <br>
+        PV of OCF Per Share:
+        <br>
+        Debt Per Share:
+        <br>
+        Cash and Equivalents Per Share:
+        <br>
+        Final Intrinsic Value:
+        <br>
       </div>
       <div class="panel-footer">
         <canvas id="line" class="chart chart-line" data="chartArray" series="series"
