--- a/partials/tenSteps/mt.html
+++ b/partials/tenSteps/mt.html
@@ -12,26 +12,48 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 
 <div class="panel panel-success">
 <div class="panel-heading">
-  <h3 class="panel-title">adfgdafgdfg</h3>
+  <h3 class="panel-title">Sustainable Competitive Advantage</h3>
 </div>
 <div class="panel-body">
-dsfasdfsdfdsf
+Gross Margins and Net Margins highest in Industry (Higher than industry and sector)
 </div>
 <table class='table table-striped table-bordered table-hover table-condensed'>
   <thead>
     <tr>
-      <th></th>
+      <tr>
+                <th>Data</th>
+                <th>
+                  Company
+                </th>
+                <th>
+                  Industry
+                </th>
+                <th>
+                  Sector
+                </th>
+
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td></td>
+      <td>Gross Margins</td>
+      <tr>
+              <!--   <td
+                  ng-repeat="gm in reutersFinancial.grossmargin">
+                  <span ng-bind="gm"></span>
+                </td> -->
+              </tr>
+              <tr>
+                <td>
+                  Net Margins
+                </td>
+                <!-- <td
+                  ng-repeat="nm in reutersFinancial.netmargin">
+                  <span ng-bind="nm"></span>
+                </td> -->
     </tr>
   </tbody>
 </table>
-<div class="panel-footer">
-
-</div>
 </div>
 </div>
 </div>
@@ -43,10 +65,10 @@ dsfasdfsdfdsf
 
   <div class="panel panel-info">
   <div class="panel-heading">
-    <h3 class="panel-title">adfgdafgdfg</h3>
+    <h3 class="panel-title">Return on Equity</h3>
   </div>
   <div class="panel-body">
-  dsfasdfsdfdsf
+  ROE> 12-15%
   </div>
   <table class='table table-striped table-bordered table-hover table-condensed'>
     <thead>
@@ -60,9 +82,6 @@ dsfasdfsdfdsf
       </tr>
     </tbody>
   </table>
-  <div class="panel-footer">
-
-  </div>
   </div>
   <hr></hr>
   </div>
