--- a/partials/tenSteps/iv.html
+++ b/partials/tenSteps/iv.html
@@ -8,7 +8,10 @@
         <h3 class="panel-title">IV</h3>
       </div>
       <div class="panel-body">
-        Operating Cash Flow:
+{{ivObject | json}}
+<br>
+
+        Operating Cash Flow: {{ivObject.cashflow}}
         <br>
         Total Debt:
         <br>
