--- a/partials/tenSteps/mt.html
+++ b/partials/tenSteps/mt.html
@@ -18,7 +18,7 @@ Gross Margins and Net Margins highest in Industry (Higher than industry and sect
 <table class='table table-striped table-bordered table-hover table-condensed'>
   <thead>
     <tr>
-      <tr>
+    
                 <th>Data</th>
                 <th>
                   Company
@@ -34,13 +34,8 @@ Gross Margins and Net Margins highest in Industry (Higher than industry and sect
   </thead>
   <tbody>
     <tr>
-      <td>Gross Margins</td>
-      <tr>
-              <!--   <td
-                  ng-repeat="gm in reutersFinancial.grossmargin">
-                  <span ng-bind="gm"></span>
-                </td> -->
-              </tr>
+      <td>Gross Margins</td></tr>
+
               <tr>
                 <td>
                   Net Margins
@@ -50,6 +45,7 @@ Gross Margins and Net Margins highest in Industry (Higher than industry and sect
                   <span ng-bind="nm"></span>
                 </td> -->
     </tr>
+
   </tbody>
 </table>
 </div>
